# Feednix

./: README.md  configure.ac  configure.sh
.github/workflows/: c-cpp.yml
src/: CursesProvider.cpp  CursesProvider.h  Makefile.am  main.cpp
